--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mdi/js": "^6.5.95",
     "@pinia/nuxt": "^0.1.8",
     "axios": "^0.25.0",
+    "dayjs": "^1.10.7",
     "nodemailer": "^6.7.2",
     "pinia": "^2.0.11"
   }
