--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.25.0",
     "dayjs": "^1.10.7",
     "nodemailer": "^6.7.2",
-    "pinia": "^2.0.11"
+    "pinia": "^2.0.11",
+    "vue-spinner": "^1.0.4"
   }
 }
